# slambook2_whx

./: .gitignore
ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  libHelloSLAM.h  useHello.cpp
ch2/.kdev4/: ch2.kdev4
ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: eigenGeometry.cpp  useGeometry.cpp
ch7/: CMakeLists.txt  check_pos_init.cpp  pose_estimation_3d3d.cpp  pose_estimation_3d3d_q7.cpp
